Added template AmpPhaseDataLib.ini.   Table names in ResultsDatabase

--- a/AmpPhaseDataLib.ini
+++ b/AmpPhaseDataLib.ini
@@ -1,2 +1,10 @@
 [Configuration]
 localDatabaseFile = AmpPhaseDataLib.sqlite
+resultsDatabase = MySQL
+plotImageDatabase = MySQL
+
+[MySQL]
+host = localhost
+database = AmpPhaseData
+user =
+passwd = 
