Added IFProcAmpStability.py to demo making plots for the IF Processor V3 bench tests Fixed default plotElements arguments Using provided TITLE for ensemble stability plot (+8 squashed commit) fix to use self.parseTimeStamp().  Improve naming and comments of isDirty(), clearDirty() TimeSeriesAPI:  more explicit parameter typing TimeSeriesDatabase: fix query in insertTimeSeriesHeader() Fix insert query in PlotImageDatabase .gitignore Docs-local Check in test configs Always update header in finishTimeSeries().  Now passes t_plotStoreResults Refactor to move data arrays and units conversion into class TimeSeries.  Passes t_TimeSeriesAPI Changed directory structure for tests: UnitTests within packages Add tests/behave_script.py TimeSeriesAPI using TypeError instead of ValueError in most cases remove sqlite and conda from requirements.txt start moving toward stateless about startTime Add executemany() to Database/Driver/SQLite.   Use it for inserting time series. Added tests/integration/InsertLNA

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//AmpPhaseDataLib/Constants.py=UTF-8
 encoding//Apps/AmpPhasePlot.py=UTF-8
+encoding//tests/behave_script.py=utf-8
