--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,8 @@ behave==1.2.6
 PyHamcrest==1.9.0
 mysql-connector-python>=8.0.18
 plotly==4.8.1
-psutil==5.7.0
+psutil>=5.9.4
 requests==2.24.0
 allantools==2019.9
 pydantic>=1.8.1
+python-dateutil>=2.8
